convert list of autocomplete tags to be tag form, and wrap instead of displayed vertically. Add X button and + icon styling. Set width of main-page__content to prevent ingredient input from unintentionally expanding

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -46,7 +46,6 @@
 
     &-link {
       font-family: $nav-font-stack;
-      font-size: 0.75rem;
       color: $dark-blue;
 
       @include tablet {
