--- a/src/components/IngredientSelector/IngredientSelector.scss
+++ b/src/components/IngredientSelector/IngredientSelector.scss
@@ -2,26 +2,102 @@
 @use "../../styles/partials/mixins" as *;
 @use "../../styles/partials/typography" as *;
 
-.ingredients {
+.ingredient-selector {
   background-color: $light-blue;
   padding: $mobile-spacing;
   border-radius: 12px;
-  &__list {
+
+  &__input-container {
+    padding: 0.5rem;
+    border-radius: 12px;
+    border: 2px solid $med-blue;
+    font-family: $body-font-stack;
+    color: $dark-blue;
+    background-color: $bg-light;
     display: flex;
     flex-wrap: wrap;
-    gap: 0.25rem;
+    align-items: flex-start;
+    width: 100%;
+    max-width: 100%;
+    margin: 0.5rem 0;
+    min-height: 2.375rem;
+    overflow: hidden;
+    box-sizing: border-box;
+  }
+
+  &__selected {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.3rem;
+    width: 100%;
+    max-width: 100%;
 
     &-item {
-      padding: 0.5rem;
+      display: inline-flex;
+      align-items: center;
       background-color: $dark-blue;
       color: $light-blue;
-      font-weight: 600;
+      padding: 0.3rem 0.5rem;
       border-radius: 8px;
+      font-size: 0.875rem;
+      white-space: nowrap;
+      max-width: 100%;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      flex-shrink: 0;
+    }
 
-      &--selected {
-        background-color: $green;
-        color: $dark-blue;
-      }
+    &-remove {
+      width: 1rem;
+      color: $light-blue;
+      cursor: pointer;
+    }
+  }
+
+  // &__selected-item {
+  //   display: inline-flex;
+  //   align-items: center;
+  //   background-color: $dark-blue;
+  //   color: $light-blue;
+  //   padding: 0.3rem 0.5rem;
+  //   border-radius: 8px;
+  //   font-size: 0.875rem;
+  //   white-space: nowrap;
+  //   max-width: 100%;
+  //   overflow: hidden;
+  //   text-overflow: ellipsis;
+  //   flex-shrink: 0;
+  // }
+
+  &__input {
+    outline: none;
+    border: none;
+    flex: 1 1 auto;
+    min-width: 120px;
+    width: 100%;
+    background: none;
+    font-family: $body-font-stack;
+    font-size: 1rem;
+    padding: 5px;
+  }
+
+  &__autocomplete {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    color: $dark-blue;
+
+    &-item {
+      background-color: $med-blue;
+      padding: 0.25rem 0.5rem;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    &-icon {
+      width: 10px;
+      height: 10px;
+      margin-right: 0.1rem;
     }
   }
 }
