--- a/src/pages/MainPage/MainPage.scss
+++ b/src/pages/MainPage/MainPage.scss
@@ -7,10 +7,18 @@
   flex-direction: column;
   align-items: center;
 
+  @include tablet {
+    margin: $tablet-spacing auto;
+  }
+
   &__hero {
     display: flex;
     justify-content: center;
     width: 100%;
+
+    @include tablet {
+      width: 80%;
+    }
 
     &-img {
       width: 90%;
@@ -20,6 +28,11 @@
   }
 
   &__content {
+    @include tablet {
+      width: 75%;
+      margin: 0 $tablet-spacing;
+    }
+
     &-title {
       text-align: center;
     }
