--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -40,8 +40,8 @@ h1 {
   color: $dark-blue;
 
   @include tablet {
-    font-size: 2rem;
-    line-height: 2.5rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 
@@ -60,10 +60,12 @@ h2 {
 h3,
 label,
 a,
-button {
-  font-size: 0.8125rem;
+button,
+li,
+input {
+  font-size: 1rem;
   font-weight: 600;
-  line-height: 1.25rem;
+  line-height: 1.375rem;
 
   @include tablet {
     font-size: 0.875rem;
